# mini-self-driving-robot

./: .gitignore  LICENSE  README.md
Arduino-Controller/motorControl/: motorControl.ino
images_processing/: CMakeLists.txt
images_processing/src/: realtime_pixel_info_hovering_mouse.cpp  visualizing_roi_perspective.cpp
sensorsDriversTest/: CMakeLists.txt
sensorsDriversTest/src/: realsense_test.cpp  rs_opencv_realtime.cpp
sensors_drivers_test/: CMakeLists.txt
sensors_drivers_test/src/: capture_save_image.cpp  realsense_fps_and_frame_size_monitor.cpp  realsense_fps_with_opencv.cpp
